--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -67,7 +67,7 @@
                     android:text="Email"
                     android:textSize="15dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/emailt"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
                     android:text="Contact"
                     android:textSize="15dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/contactt"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
@@ -117,7 +117,7 @@
                     android:text="Street No."
                     android:textSize="15dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/street_not"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
@@ -142,7 +142,7 @@
                     android:text="Street"
                     android:textSize="15dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/streett"
                     android:layout_width="250dp"
                     android:inputType="textPersonName"
@@ -167,7 +167,7 @@
                     android:text="City"
                     android:textSize="15dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/cityt"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
@@ -192,13 +192,25 @@
                     android:text="Province"
                     android:textSize="15dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/provincet"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:layout_marginTop="5dp"
                     android:textSize="15dp" />
+
+<!--                <RelativeLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:padding="4dp"-->
+<!--                    android:background="#dddddd">-->
+<!--                    <Spinner-->
+<!--                        style="@style/Widget.AppCompat.DropDownItem.Spinner"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:id="@+id/spinner" />-->
+<!--                </RelativeLayout>-->
 
             </LinearLayout>
 
@@ -217,7 +229,7 @@
                     android:text="Hospital"
                     android:textSize="15dp" />
 
-                <EditText
+                <TextView
                     android:id="@+id/hospitalt"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
@@ -231,17 +243,17 @@
 
 
 
-            <Button
-                android:id="@+id/save"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:text="Save"
-                android:textAllCaps="false"
-                android:background="@color/colorPrimary"
-                android:textColor="@android:color/white"
-                android:textSize="15dp" />
+<!--            <Button-->
+<!--                android:id="@+id/save"-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginTop="30dp"-->
+<!--                android:text="Save"-->
+<!--                android:textAllCaps="false"-->
+<!--                android:background="@color/colorPrimary"-->
+<!--                android:textColor="@android:color/white"-->
+<!--                android:textSize="15dp" />-->
 
             <Button
                 android:id="@+id/change_username"
